# Timoha23-test-o-parser

./: .env.example  .gitignore  README.md  docker-compose.yaml  pyproject.toml
backend/: Dockerfile.backend  Dockerfile.celery  backend_entrypoint.sh
backend/api/: urls.py
backend/backend/: cache.py  settings.py  urls.py  yasg.py
backend/backend/parser/: exceptions.py  ozon_parser.py
backend/products/: admin.py  models.py  serializers.py  tasks.py  urls.py  views.py
backend/products/migrations/: 0001_initial.py  0002_auto_20230801_0516.py  0003_auto_20230803_0609.py  0004_auto_20230805_0839.py
bot/: Dockerfile.bot  cache.py  main.py
